--- a/src/components/layout/Nfdi4chem.css
+++ b/src/components/layout/Nfdi4chem.css
@@ -1821,7 +1821,6 @@ Jumpto styles
     background-color: white;
     position: absolute;
     display: block;
-
 }
 
 
@@ -1846,8 +1845,7 @@ Jumpto styles
     padding-bottom: 10px;    
     z-index: 99999;        
     width: 400px;    
-    margin-left: 114px;
-    margin-top: -12px;
+    margin-left: 85px;
 }
 
 .jumpto-item-holder{
