--- a/src/components/layout/Nfdi4ing.css
+++ b/src/components/layout/Nfdi4ing.css
@@ -1904,8 +1904,7 @@ Jumpto styles
     padding-bottom: 10px;    
     z-index: 99999;        
     width: 400px;    
-    margin-left: 114px;
-    margin-top: -12px;
+    margin-left: 85px;    
 }
 
 .jumpto-item-holder{
